Crash when switching to texture paint workspace on models with a subdivision modifier #94865

Closed
opened 2022-01-13 05:19:11 +01:00 by Max E · 8 comments

System Information
Operating system: Window 11 Home Version 10.0.22000
Graphics card: NVIDIA GeForce GTX 1060

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-12 19:46, hash: 97c2c39916, type: release

Caused by eed45d2a23

Short description of error
Crash when switching to texture paint workspace on models with a subdivision modifier

Exact steps for others to reproduce the error
From the default startup scene:

  • add a subdivision modifier to the default cube
  • switch to texture paint workspace
  • crash

It is caused by the Display Texture Paint UVs option being ON in the Image Editor.

Original report

Short description of error
When selecting certain objects (unclear what exactly has to be wrong with the object) Blender crashes when switching into texture paint mode either by

  • clicking the texture paint workspace
  • by using the "ctrl + tab" pie menu for mode switching

I also tried out the Cube Diorama demo file (see https://www.blender.org/download/demo-files/) and noticed, that when some objects are selected and you switch to texture paint there is a crash and others work correctly. I could not find out what the difference between these objects was, but here I marked the ones that crash and the ones that work (I did not try every single object, these are just examples):
2022-01-13_blender-bug-report__texture-paint-mode-crash__diorama.png

Another weird thing: In my own attached blend file, Blender does NOT crash when switching to texture paint mode using the menu bar!!! But in the Cube Diorama using the menu bar to switch crashes just like the other two methods.

Exact steps for others to reproduce the error
Based on the attached .blend file video-cone__procedural_tutorial.blend
do the following:

click the texture paint workspace -> crash

Other method to crash:

press ctrl + tab, choose texture paint mode from pie menu -> crash

video-cone__procedural_tutorial.crash.txt

**System Information** Operating system: Window 11 Home Version 10.0.22000 Graphics card: NVIDIA GeForce GTX 1060 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-12 19:46, hash: 97c2c3991620, type: release Caused by eed45d2a23 **Short description of error** Crash when switching to texture paint workspace on models with a subdivision modifier **Exact steps for others to reproduce the error** From the default startup scene: - add a subdivision modifier to the default cube - switch to texture paint workspace - crash It is caused by the `Display Texture Paint UVs` option being ON in the Image Editor. **Original report** **Short description of error** When selecting certain objects (unclear what exactly has to be wrong with the object) Blender crashes when switching into texture paint mode either by - clicking the texture paint workspace - by using the "ctrl + tab" pie menu for mode switching I also tried out the Cube Diorama demo file (see https://www.blender.org/download/demo-files/) and noticed, that when some objects are selected and you switch to texture paint there is a crash and others work correctly. I could not find out what the difference between these objects was, but here I marked the ones that crash and the ones that work (I did not try every single object, these are just examples): ![2022-01-13_blender-bug-report__texture-paint-mode-crash__diorama.png](https://archive.blender.org/developer/F12803007/2022-01-13_blender-bug-report__texture-paint-mode-crash__diorama.png) Another weird thing: In my own attached blend file, Blender does NOT crash when switching to texture paint mode using the menu bar!!! But in the Cube Diorama using the menu bar to switch crashes just like the other two methods. **Exact steps for others to reproduce the error** Based on the attached .blend file [video-cone__procedural_tutorial.blend](https://archive.blender.org/developer/F12803001/video-cone__procedural_tutorial.blend) do the following: # click the texture paint workspace -> crash Other method to crash: # press ctrl + tab, choose texture paint mode from pie menu -> crash [video-cone__procedural_tutorial.crash.txt](https://archive.blender.org/developer/F12802996/video-cone__procedural_tutorial.crash.txt)
Author

Added subscriber: @DerTee

Added subscriber: @DerTee
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, works without the subdiv modifier.

Assume this is caused by eed45d2a23, but will double-check.

Can confirm, works without the subdiv modifier. Assume this is caused by eed45d2a23, but will double-check.
Philipp Oeser changed title from Crash when switching to texture paint mode on certain models to Crash when switching to texture paint workspace on models with a subdivision modifier 2022-01-13 09:38:05 +01:00
Member

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich
Member

@kevindietrich ; mind checking?

@kevindietrich ; mind checking?

This issue was referenced by bc66cd9868

This issue was referenced by bc66cd9868746ce92dd6de004a8b8e6a0188defe

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-01-16 08:43:07 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94865
No description provided.