source/blender/draw/intern/draw_cache_impl_subdivision.cc
@@ -1676,6 +1676,10 @@ void draw_subdiv_init_mesh_render_data(DRWSubdivCache *cache,
   mr->poly_len = mesh->totpoly;
   mr->loop_len = mesh->totloop;
   mr->extract_type = MR_EXTRACT_MESH;
+  mr->toolsettings = toolsettings;
+  mr->v_origindex = static_cast<int *>(CustomData_get_layer(&mr->me->vdata, CD_ORIGINDEX));
+  mr->e_origindex = static_cast<int *>(CustomData_get_layer(&mr->me->edata, CD_ORIGINDEX));
+  mr->p_origindex = static_cast<int *>(CustomData_get_layer(&mr->me->pdata, CD_ORIGINDEX));
 
   /* MeshRenderData is only used for generating edit mode data here. */
   if (!cache->bm) {
@@ -1686,7 +1690,6 @@ void draw_subdiv_init_mesh_render_data(DRWSubdivCache *cache,
   BM_mesh_elem_table_ensure(bm, BM_EDGE | BM_FACE | BM_VERT);
 
   mr->bm = bm;
-  mr->toolsettings = toolsettings;
   mr->eed_act = BM_mesh_active_edge_get(bm);
   mr->efa_act = BM_mesh_active_face_get(bm, false, true);
   mr->eve_act = BM_mesh_active_vert_get(bm);
@@ -1696,9 +1699,6 @@ void draw_subdiv_init_mesh_render_data(DRWSubdivCache *cache,
   mr->freestyle_edge_ofs = CustomData_get_offset(&bm->edata, CD_FREESTYLE_EDGE);
   mr->freestyle_face_ofs = CustomData_get_offset(&bm->pdata, CD_FREESTYLE_FACE);
 #endif
-  mr->v_origindex = static_cast<int *>(CustomData_get_layer(&mr->me->vdata, CD_ORIGINDEX));
-  mr->e_origindex = static_cast<int *>(CustomData_get_layer(&mr->me->edata, CD_ORIGINDEX));
-  mr->p_origindex = static_cast<int *>(CustomData_get_layer(&mr->me->pdata, CD_ORIGINDEX));
 }
 
 /**
