source/blender/draw/intern/mesh_extractors/extract_mesh.h
@@ -223,10 +223,16 @@ typedef void(ExtractInitSubdivFn)(const struct DRWSubdivCache *subdiv_cache,
                                   struct MeshBatchCache *cache,
                                   void *buf,
                                   void *data);
-typedef void(ExtractIterSubdivFn)(const struct DRWSubdivCache *subdiv_cache,
-                                  const MeshRenderData *mr,
-                                  void *data,
-                                  uint subdiv_quad_index);
+typedef void(ExtractIterSubdivBMeshFn)(const struct DRWSubdivCache *subdiv_cache,
+                                       const MeshRenderData *mr,
+                                       void *data,
+                                       uint subdiv_quad_index,
+                                       const BMFace *coarse_quad);
+typedef void(ExtractIterSubdivMeshFn)(const struct DRWSubdivCache *subdiv_cache,
+                                      const MeshRenderData *mr,
+                                      void *data,
+                                      uint subdiv_quad_index,
+                                      const MPoly *coarse_quad);
 typedef void(ExtractFinishSubdivFn)(const struct DRWSubdivCache *subdiv_cache,
                                     const MeshRenderData *mr,
                                     struct MeshBatchCache *cache,
@@ -251,7 +257,8 @@ typedef struct MeshExtract {
   ExtractFinishFn *finish;
   /** Executed on main thread for subdivision evaluation. */
   ExtractInitSubdivFn *init_subdiv;
-  ExtractIterSubdivFn *iter_subdiv;
+  ExtractIterSubdivBMeshFn *iter_subdiv_bm;
+  ExtractIterSubdivMeshFn *iter_subdiv_mesh;
   ExtractFinishSubdivFn *finish_subdiv;
   /** Used to request common data. */
   eMRDataType data_type;
